# pet-protect-infra

./: .cruft.json  .cz.toml  .envrc  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Justfile  README.md  flake.nix  mkdocs.yml  pyproject.toml  tox.ini
.github/: settings.yml
.github/workflows/: checks.yaml  release.yaml
nix/: ci.nix  dev.nix
pet_protect_infra/: __init__.py
tests/: test_packaging_attribute.py  utils.py
